# stakedex-sdk

./: .gitignore  Cargo.toml  README.md
cli/srlut/: Cargo.toml
cli/srlut/src/: lut_list.rs  main.rs
cli/srlut/src/subcmd/: extend.rs  gen.rs  init.rs  mod.rs
common/: Cargo.toml  README.md
common/src/: base_amm.rs  consts.rs  deposit_sol.rs  deposit_stake.rs  errs.rs  fees.rs  init_from_keyed_account.rs  jupiter_stakedex_interface.rs  lib.rs  pda.rs  pool_pair.rs  withdraw_sol.rs  withdraw_stake.rs
common/src/address/: lido.rs  marinade.rs  mod.rs  spl_deposit_cap_guard.rs  spl_stake_pool_like.rs  stakedex.rs  unstake_it.rs
index/: Cargo.toml  README.md
index/src/: deposit_sol.rs  lib.rs  one_way_pool_pair.rs  two_way_pool_pair.rs
interfaces/: README.md
interfaces/stakedex_deposit_sol_interface/: Cargo.toml  README.md  idl.json
interfaces/stakedex_deposit_sol_interface/src/: instructions.rs  lib.rs  typedefs.rs
interfaces/stakedex_deposit_stake_interface/: Cargo.toml  README.md  idl.json
interfaces/stakedex_deposit_stake_interface/src/: instructions.rs  typedefs.rs
interfaces/stakedex_interface/: Cargo.toml  README.md  idl.json
interfaces/stakedex_interface/src/: accounts.rs  errors.rs  instructions.rs  lib.rs  typedefs.rs
interfaces/stakedex_withdraw_sol_interface/: Cargo.toml  README.md  idl.json
interfaces/stakedex_withdraw_sol_interface/src/: instructions.rs  lib.rs
interfaces/stakedex_withdraw_stake_interface/: Cargo.toml  README.md  idl.json
interfaces/stakedex_withdraw_stake_interface/src/: instructions.rs  lib.rs  typedefs.rs
jup_interface/: Cargo.toml  README.md
jup_interface/src/: jupiter_stakedex_interface.rs  lib.rs
jup_interface/src/pool_pair/: common.rs  mod.rs  one_way.rs  prefund.rs  two_way.rs
jup_interface/src/pool_sol/: deposit_sol.rs  deposit_withdraw_sol.rs  mod.rs  withdraw_sol.rs
libs/: README.md
libs/eversol_stake_pool/: Cargo.toml
libs/eversol_stake_pool/src/: lib.rs  stakedex_traits.rs
libs/eversol_stake_pool/src/stakedex_traits/: base.rs  deposit_sol.rs  deposit_stake.rs  withdraw_stake.rs
libs/lido/: Cargo.toml
libs/lido/src/: lib.rs  stakedex_traits.rs
libs/lido/src/stakedex_traits/: base.rs  deposit_sol.rs  mod.rs  withdraw_stake.rs
libs/lido/tests/: test_mainnet.rs
libs/marinade/: Cargo.toml
libs/marinade/src/: calc.rs  consts.rs  lib.rs  liq_pool.rs  stake_system.rs  stakedex_traits.rs  state.rs  validator_system.rs
libs/marinade/src/stakedex_traits/: base.rs  deposit_sol.rs  deposit_stake.rs  mod.rs  withdraw_stake.rs
libs/socean_stake_pool/: Cargo.toml
libs/socean_stake_pool/src/: lib.rs  stakedex_traits.rs
libs/socean_stake_pool/src/stakedex_traits/: base.rs  deposit_sol.rs  deposit_stake.rs  withdraw_stake.rs
libs/spl_stake_pool/: Cargo.toml
libs/spl_stake_pool/src/: deposit_sol.rs  lib.rs  stakedex_traits.rs  swap_via_stake.rs
libs/spl_stake_pool/src/deposit_cap_guard/: mod.rs
libs/spl_stake_pool/src/stakedex_traits/: base.rs  deposit_sol.rs  deposit_stake.rs  mod.rs  withdraw_sol.rs  withdraw_stake.rs
libs/unstake_it/: Cargo.toml
libs/unstake_it/src/: fee.rs  lib.rs  pda.rs  rational.rs  stakedex_traits.rs
libs/unstake_it/src/stakedex_traits/: base.rs  deposit_stake.rs  mod.rs
libs/unstake_it/src/stakedex_traits/base/: main.rs  mod.rs  prefund.rs
libs/unstake_it/src/stakedex_traits/deposit_stake/: common.rs  main.rs  mod.rs  prefund.rs
stakedex_interface/: README.md  idl.json
stakedex_interface/src/: instructions.rs  lib.rs
stakedex_sdk/: Cargo.toml  README.md
stakedex_sdk/src/: lib.rs
stakedex_sdk/tests/: common.rs  find_vsa.rs  mainnet_test.rs  mod.rs  test_main.rs
stakedex_sdk/tests/tests/: find_vsa.rs  mod.rs
test-fixtures/: README.md  blaze-list.json  blaze-pool.json  blaze-reserves.json  bsol-mint.json  fetch-blaze.sh  fetch-lido.sh  fetch-marinade.sh  fetch-socean.sh  fetch-unstakeit.sh  lido-prog-data.json  lido-prog.json  lido-state.json  marinade-liq-pool-msol-leg.json  marinade-liq-pool-sol-leg.json  marinade-msol-treasury.json  marinade-prog-data.json  marinade-prog.json  marinade-reserves.json  marinade-stake-list.json  marinade-state.json  marinade-validator-list.json  mock_auth_kp.json  msol-mint.json  scnsol-mint.json  socean-list.json  socean-manager-fee-dest.json  socean-pool.json  socean-prog-data.json  socean-prog.json  socean-reserves.json  spl-stake-pool-prog-data.json  spl-stake-pool-prog.json  stsol-mint.json  unstake-fees.json  unstake-pool.json  unstake-prog-data.json  unstake-prog.json  unstake-protocol-fees-dest.json  unstake-protocol-fees.json  (+1 more)
