[workspace]
resolver = "2"

members = [
    "cli/*",
    "common",
    "interfaces/*",
    "jup_interface",
    "libs/*",
    "stakedex_sdk"
]

[workspace.dependencies]
anyhow = "^1.0"
bincode = "^1.0"
borsh = ">=0.9,<1.0.0"
clap = "^3"
itertools = ">=0.1"
jupiter-amm-interface = "~0.3.2"
lazy_static = "^1.0"
# set git dependencies to branch instead of locking to rev so that consumers can upgrade easily
lido = { git = "https://github.com/jup-ag/solido", branch = "jupiter", features = ["no-entrypoint"] } # rev = "ec25a9b"
marinade_finance_interface = { git = "https://github.com/igneous-labs/marinade_finance_interface", branch = "master" } # rev = "4d1895b"
num-derive = ">=0.1"
num-traits = ">=0.1"
rand = "0.8.5"
rust_decimal = ">=1.0,<=1.32.0" # anything >1.32 uses borsh ^1
sanctum-macros = "^1.2"
serde = "^1"
serde_json = "^1"
spl-associated-token-account = { version = ">=1", features = ["no-entrypoint"] }
spl-math = { version = "0.1.0", features = ["no-entrypoint"]}
spl-stake-pool = { version = "^1", features = ["no-entrypoint"] }
spl-token = ">=3.0"
thiserror = "^1.0"
tokio = "^1.0"
unstake_interface = { git = "https://github.com/igneous-labs/sanctum-unstake-program.git", rev = "069f941" }
unstake-lib = { git = "https://github.com/igneous-labs/sanctum-unstake-program.git", rev = "069f941" }

# sanctum solana utils
sanctum-solana-cli-utils = { git = "https://github.com/igneous-labs/sanctum-solana-utils.git", branch = "master" } # rev = "111f01"

# sanctum-lst-list
# keep branch = "master" for flexibility of downstream crates
sanctum-lst-list = { git = "https://github.com/igneous-labs/sanctum-lst-list.git", branch = "master" }

# solana core crates
solana-program = "^1"
solana-sdk = "^1"
solana-account-decoder = "^1"
solana-client = "^1"

# workspace members
stakedex_deposit_sol_interface = { path = "./interfaces/stakedex_deposit_sol_interface" }
stakedex_deposit_stake_interface = { path = "./interfaces/stakedex_deposit_stake_interface" }
stakedex_interface = { path = "./interfaces/stakedex_interface" }
stakedex_jup_interface = { path = "./jup_interface" }
stakedex_lido = { path = "./libs/lido" }
stakedex_marinade = { path = "./libs/marinade" }
stakedex_sdk_common = { path = "./common" }
stakedex_spl_stake_pool = { path = "./libs/spl_stake_pool" }
stakedex_unstake_it = { path = "./libs/unstake_it" }
stakedex_withdraw_stake_interface = { path = "./interfaces/stakedex_withdraw_stake_interface" }
