[workspace]
resolver = "2"

members = [
    "cli/*",
    "common",
    "interfaces/*",
    "jup_interface",
    "libs/*",
    "stakedex_sdk",
]

[workspace.dependencies]
anyhow = "^1.0"
bincode = "^1.0"
borsh = ">=0.9"
clap = "^4"
itertools = ">=0.1"
jupiter-amm-interface = "~0.4.0"
lazy_static = "^1.0"
# set git dependencies to branch instead of locking to rev so that consumers can upgrade easily
lido = { git = "https://github.com/igneous-labs/solido", branch = "main", features = ["no-entrypoint"] }
marinade_finance_interface = { git = "https://github.com/igneous-labs/marinade_finance_interface", branch = "master" }
num-derive = ">=0.1"
num-traits = ">=0.1"
rand = "0.8.5"
rust_decimal = ">=1.0"
sanctum-macros = "^1.2"
serde = "^1"
serde_json = "^1"
spl-associated-token-account = { version = ">=1", features = ["no-entrypoint"] }
# NB: spl-stake-pool=2.0.0 is incompatible with jupiter-amm-interface,
# but 2.0.1 patches those breaking changes.
# Ideally, this vers requirement should be "anything >=1.0 except 2.0.0"
# but theres no way to express that in cargo dep vers syntax
spl-stake-pool = { git = "https://github.com/igneous-labs/stake-pool.git", branch = "loosen-deps", features = ["no-entrypoint"] } 
spl-token = ">=3.0"
thiserror = "^1.0"
tokio = "^1.0"
unstake_interface = { git = "https://github.com/igneous-labs/sanctum-unstake-program.git", rev = "3651f16" }
unstake-lib = { git = "https://github.com/igneous-labs/sanctum-unstake-program.git", rev = "3651f16" }

# sanctum solana utils
sanctum-solana-cli-utils = { git = "https://github.com/igneous-labs/sanctum-solana-utils.git", branch = "master" }

# sanctum-lst-list
# keep branch = "master" for flexibility of downstream crates
sanctum-lst-list = { git = "https://github.com/igneous-labs/sanctum-lst-list.git", branch = "master" }

# solana core crates
solana-program = ">=1"
solana-sdk = ">=1"
solana-account-decoder = ">=1"
solana-client = ">=1"

# workspace members
stakedex_deposit_sol_interface = { path = "./interfaces/stakedex_deposit_sol_interface" }
stakedex_deposit_stake_interface = { path = "./interfaces/stakedex_deposit_stake_interface" }
stakedex_interface = { path = "./interfaces/stakedex_interface" }
stakedex_jup_interface = { path = "./jup_interface" }
stakedex_lido = { path = "./libs/lido" }
stakedex_marinade = { path = "./libs/marinade" }
stakedex_sdk_common = { path = "./common" }
stakedex_spl_stake_pool = { path = "./libs/spl_stake_pool" }
stakedex_unstake_it = { path = "./libs/unstake_it" }
stakedex_withdraw_stake_interface = { path = "./interfaces/stakedex_withdraw_stake_interface" }
stakedex_withdraw_sol_interface = { path = "./interfaces/stakedex_withdraw_sol_interface" }
