[package]
name = "stakedex_sdk_common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
jupiter-amm-interface = { workspace = true }
rust_decimal = { workspace = true }
sanctum-macros = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }
stakedex_deposit_sol_interface = { workspace = true }
stakedex_interface = { workspace = true }
thiserror = { workspace = true }

rand = "0.8.5"
