[package]
name = "stakedex_sdk"
version = "0.1.0"
edition = "2021"

[features]
test-utils = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
jupiter-amm-interface = { workspace = true }
solana-account-decoder = "^1.9"
solana-sdk = { workspace = true }
spl-associated-token-account = "1.1.1"
spl-token = { workspace = true }
stakedex_eversol_stake_pool = { workspace = true }
stakedex_interface = { workspace = true }
stakedex_lido = { workspace = true }
stakedex_marinade = { workspace = true }
stakedex_sdk_common = { workspace = true }
stakedex_socean_stake_pool = { workspace = true }
stakedex_spl_stake_pool = { workspace = true }
stakedex_unstake_it = { workspace = true }

itertools = "0.10.5"

[dev-dependencies]
solana-client.workspace = true
lazy_static.workspace = true
