[package]
name = "stakedex_sdk"
version = "0.2.0"
edition = "2021"

[features]
test-utils = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
jupiter-amm-interface = { workspace = true }
lazy_static = { workspace = true }
sanctum-lst-list = { workspace = true }
solana-account-decoder = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
stakedex_interface = { workspace = true }
stakedex_jup_interface = { workspace = true }
stakedex_lido = { workspace = true }
stakedex_marinade = { workspace = true }
stakedex_sdk_common = { workspace = true }
stakedex_spl_stake_pool = { workspace = true }
stakedex_unstake_it = { workspace = true }

[dev-dependencies]
solana-client = { workspace = true }
