[package]
name = "stakedex_eversol_stake_pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bincode = "^1.0"
borsh = "^0.9"
jupiter-core = { workspace = true }
solana-program = { workspace = true }
spl-stake-pool = { git = "https://github.com/everstake/solana-program-library", rev = "22534fe3885e698598e92b2fe20da3a8adbfc5ff"}
spl-token = { workspace = true }
stakedex_deposit_sol_interface = { workspace = true }
stakedex_deposit_stake_interface = { workspace = true }
stakedex_sdk_common = { workspace = true }
stakedex_withdraw_stake_interface = { workspace = true }
