[package]
name = "stakedex_eversol_stake_pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
solana-program = { workspace = true }
eversol-spl-stake-pool = { git = "https://github.com/jup-ag/solana-program-library", rev = "a29f1173d93c937dc32e75e36ad3ce9ef91c2293" }
spl-token = { workspace = true }
stakedex_deposit_sol_interface = { workspace = true }
stakedex_deposit_stake_interface = { workspace = true }
stakedex_sdk_common = { workspace = true }
stakedex_withdraw_stake_interface = { workspace = true }
