[package]
name = "stakedex_lido"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
lido = { git = "https://github.com/jup-ag/solido.git", rev = "2c85ddf7b50d8162d2b81d79d7fcbfd5e05dc967", features = [
    "no-entrypoint",
] }
solana-program = { workspace = true }
spl-token = { workspace = true }
stakedex_deposit_sol_interface = { workspace = true }
stakedex_withdraw_stake_interface = { workspace = true }
stakedex_sdk_common = { workspace = true }

[dev-dependencies]
solana-client = { workspace = true }
