[package]
name = "stakedex_marinade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
marinade_finance_interface = { git = "https://github.com/jup-ag/marinade_finance_interface", rev = "5747b5350c5505fc2ea597c3f8ae1f8cf71c363d" }
solana-program = { workspace = true }
spl-token = { workspace = true }
stakedex_deposit_sol_interface = { workspace = true }
stakedex_deposit_stake_interface = { workspace = true }
stakedex_sdk_common = { workspace = true }
