[package]
name = "stakedex_socean_stake_pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
solana-program = { workspace = true }
# spl-stake-pool = "^0.6.4"

spl-stake-pool = { git = "https://github.com/solana-labs/solana-program-library.git", rev = "a3996814cb44eab2834f72113b742c875ac7b1b9", features = [
    "no-entrypoint",
] }
# { git = "https://github.com/igneous-labs/solana-program-library", branch = "release/v0.1"} incompatible with solana-program ^1.9

spl-token = { workspace = true }
stakedex_deposit_sol_interface = { workspace = true }
stakedex_deposit_stake_interface = { workspace = true }
stakedex_sdk_common = { workspace = true }
stakedex_withdraw_stake_interface = { workspace = true }
