[package]
name = "stakedex_spl_stake_pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bincode = "^1.0"
borsh = "^0.9"
jupiter-core = { workspace = true }
lazy_static = "^1.0"
solana-program = { workspace = true }
spl-stake-pool = "^0.6.4"
spl-token = { workspace = true }
stakedex_deposit_sol_interface = { workspace = true }
stakedex_deposit_stake_interface = { workspace = true }
stakedex_sdk_common = { workspace = true }
stakedex_withdraw_stake_interface = { workspace = true }