[package]
name = "stakedex_unstake_it"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
solana-program = { workspace = true }
spl-math = { version = "0.1.0", features = ["no-entrypoint"] }
spl-token = { workspace = true }
stakedex_deposit_stake_interface = { workspace = true }
stakedex_sdk_common = { workspace = true }
unstake_it_interface = { git = "https://github.com/jup-ag/unstake_it_interface", rev = "c0b6e9742f7f4fd345c57e2fe3edf8fa0f0b858b" } # TODO: change to main program crate once we open source unstake.it
