[package]
name = "stakedex_unstake_it"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
solana-program = { workspace = true }
spl-math = { version = "0.1.0", features = ["no-entrypoint"]}
spl-token = { workspace = true }
stakedex_deposit_stake_interface = { workspace = true }
stakedex_sdk_common = { workspace = true }
unstake_interface = { workspace = true }
unstake-lib = { workspace = true }